guestbook/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: grafana
  name: grafana-service
  namespace: spa
spec:
  host: grafana-service-spa.172.18.33.206.nip.io
  to:
    kind: Service
    name: grafana-service
    weight: 100
  wildcardPolicy: None
